Fixed Scrollbar and attachments issue

--- a/frontend/src/components/KanbanBoard/KanbanBoard.css
+++ b/frontend/src/components/KanbanBoard/KanbanBoard.css
@@ -20,6 +20,3 @@
 .react-kanban-column input:focus {
   outline: none;
 }
-
-.react-kanban-board div::-webkit-scrollbar {
-}
