--- a/frontend/src/components/KanbanBoard/TaskComments/CommentItem/CommentItem.css
+++ b/frontend/src/components/KanbanBoard/TaskComments/CommentItem/CommentItem.css
@@ -13,7 +13,7 @@
   flex: 0 0 auto;
 }
 
-.comment-icon .comment-attachment-preview {
+.comment-icon .icon-image {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -55,7 +55,7 @@
 }
 
 .comment-content .comment-attachment-preview {
-  max-width: 100%;
+  max-width: 8rem;
   border-radius: 0.5rem;
   cursor: pointer;
   transition: opacity 0.2s ease;
