--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -121,6 +121,19 @@ body {
   height: 1rem;
 }
 
+/* Hide scrollbars on kanban board elements */
+.react-kanban-board::-webkit-scrollbar,
+.react-kanban-board div::-webkit-scrollbar {
+  width: 0px !important;
+  height: 0px !important;
+}
+
+.react-kanban-board,
+.react-kanban-board div {
+  scrollbar-width: none !important;
+  -ms-overflow-style: none !important;
+}
+
 ::-webkit-scrollbar-thumb {
   background: #888;
   border-radius: 4px;
